welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:12: error: type mismatch;
 found   : Unit
 required: Boolean
			if (estFaceMur()==true)
                        ^SnakeBuggle:18: error: type mismatch;
 found   : Unit
 required: Boolean
			if (estFaceMur()==true)
                        ^